[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/models/tube_type_0.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/materials/tube.material" type="Material" id=2]
[ext_resource path="res://objects/interaction.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/objects/interactive/tube.gd" type="Script" id=4]
[ext_resource path="res://objects/elements/water.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/textures/SEDIMENTIvory.jpg" type="Texture" id=6]
[ext_resource path="res://objects/elements/sediment.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/elements/true_sediment.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/materials/water.material" type="Material" id=9]

[sub_resource type="ParticlesMaterial" id=8]
spread = 180.0
gravity = Vector3( 0, 1.5, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0

[sub_resource type="SphereMesh" id=9]
radius = 0.03
height = 0.06
radial_segments = 12
rings = 12

[sub_resource type="SpatialMaterial" id=2]
render_priority = -1
albedo_color = Color( 1, 1, 1, 0.588235 )
albedo_texture = ExtResource( 6 )
roughness = 0.2
roughness_texture = ExtResource( 6 )
ao_enabled = true
ao_light_affect = 0.0
ao_on_uv2 = false
ao_texture_channel = 0
refraction_enabled = true
refraction_scale = 0.05
refraction_texture_channel = 0

[sub_resource type="CylinderShape" id=4]
height = 0.258339
radius = 0.180145

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.0404251, 0.0895884, 0.0428093 )

[sub_resource type="Animation" id=6]
length = 0.001

[sub_resource type="Animation" id=7]
resource_name = "move_bubble"
length = 10.0

[node name="tube" type="RigidBody"]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.122, -3.30054, 3.18603 )
mesh = ExtResource( 1 )
skeleton = NodePath("../CollisionShape")
material/0 = ExtResource( 2 )

[node name="liquid" type="Spatial" parent="MeshInstance"]

[node name="element_1" parent="MeshInstance/liquid" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.122, 3.32, -3.196 )
visible = false

[node name="Sphere" type="CSGSphere" parent="MeshInstance/liquid/element_1"]
transform = Transform( 1, 0, 0, 0, 0.877698, 0, 0, 0, 1, 0, -0.0341837, -0.000138847 )
radius = 0.0612399
radial_segments = 40
rings = 25
material = ExtResource( 9 )

[node name="bubble" type="Particles" parent="MeshInstance/liquid/element_1"]
transform = Transform( 0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0.0525801, 0 )
visible = false
amount = 7
lifetime = 0.16
speed_scale = 0.2
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 9 )

[node name="element_2" parent="MeshInstance/liquid" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.122, 3.411, -3.196 )
visible = false

[node name="element_3" parent="MeshInstance/liquid" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.122, 3.503, -3.196 )
visible = false

[node name="element_4" parent="MeshInstance/liquid" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.122, 3.594, -3.196 )
visible = false

[node name="element_5" parent="MeshInstance/liquid" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.122, 3.685, -3.196 )
visible = false

[node name="sediment" type="Spatial" parent="MeshInstance"]

[node name="element_1" parent="MeshInstance/sediment" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.122, 3.411, -3.196 )
visible = false

[node name="element_2" parent="MeshInstance/sediment" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.122, 3.32, -3.196 )
visible = false

[node name="Sphere" type="CSGSphere" parent="MeshInstance/sediment/element_2"]
transform = Transform( 1, 0, 0, 0, 0.877698, 0, 0, 0, 1, 0, -0.0427787, -0.000138847 )
radius = 0.0612399
radial_segments = 40
rings = 25
material = SubResource( 2 )

[node name="sediment" parent="MeshInstance/sediment" instance=ExtResource( 8 )]
transform = Transform( 0.027, 0, 0, 0, 0.045, 0, 0, 0, 0.027, 3.12303, 3.28075, -3.19564 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.376851, 0, 0, 0, 1.34236, 0, 0, 0, 0.397539, 0, 0.280153, -0.00997448 )
shape = SubResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0165541, -0.0104044 )
shape = SubResource( 5 )

[node name="interaction" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.0842691, 0, 0, 0, 0.325166, 0, 0, 0, 0.0835238, 0.00632, 0.172919, -0.00947995 )
visible = false
label = "Пробирка"
right_click_action = "take"
right_click_label = "Взять"
test_click_action = "reaction"
highlighting = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
anims/RESET = SubResource( 6 )
anims/move_bubble = SubResource( 7 )
